front/components/commons/RollingNotice.module.css
.notice {
  position: absolute;
  right: 25px;
  top: 13px;
  display: inline;
}

.noticeRolling {
  height: 30px;
  line-height: 200%;
  width: 280px;
  position: relative;
  overflow: hidden;
  display: inline-block;
  vertical-align: middle;
}

.noticeRolling ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.noticeRolling a {
  font-weight: 400;
  color: #d5e3fc;
  top: 0px;
  padding: auto 10px;
  width: 100%;
  text-align: left;
  display: inline-block;
  transform: translateY(0px);
  animation: roll 5s infinite;
}

.noticeRolling .date {
  font-size: 10px;
  background-color: #4a91f5;
  color: aliceblue;
  padding: 3px 7px 2.5px 8px;
  border-radius: 6px;
}

.noticeRolling .title {
  font-size: 13px;
  margin-left: 10px;
  text-align: left;
  color: #696969;
}

.noticeRolling a:hover {
  text-decoration: none;
  color: #ecf2fe;
}

@keyframes roll {
  0% {
    transform: translateY(+20%);
  }
  10% {
    transform: translateY(0%);
  }
  20% {
    transform: translateY(0%);
  }
  30% {
    transform: translateY(0%);
  }
  40% {
    transform: translateY(-100%);
  }
  50% {
    transform: translateY(-100%);
  }
  60% {
    transform: translateY(-100%);
  }
  70% {
    transform: translateY(-200%);
  }
  80% {
    transform: translateY(-200%);
  }
  90% {
    transform: translateY(-200%);
  }
  100% {
    transform: translateY(-280%);
  }
}

/* 공고 팝오버리스트 */

.noticePopoverTitle {
  padding: 8px 0 5px 30px;
  font-size: 0.9em;
  font-weight: 600;
  border-bottom: 1px solid #e5f0ff;
}

.noticePopoverList ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.noticePopoverItem a {
  font-family: "NanumBarunGothic";
  font-size: 0.9em;
  font-weight: 400;
  line-height: 240%;
  padding: 0 10px;
  text-align: left;
  color: #404040;
  height: 33px;
}

.noticePopoverItem a:hover {
  text-decoration: none;
  font-weight: 600;
}

.noticePopoverItem span {
  display: inline-block;
  color: #696969;
  width: 100%;
}

.buttonPopover {
  transform: scale(0.5, 0.5);
}

.buttonPopover:focus {
  box-shadow: none;
}

/* 반응형 */
@media screen and (max-width: 880px) {
  .noticeRolling,
  .buttonPopover,
  .noticePopover {
    display: none;
    visibility: hidden;
    width: 0;
    height: 0;
  }
}

/* 반응형 */
@media screen and (max-width: 991.98px) {
  .notice {
    right: 0px;
  }
}

